Fixed blog card overflow caused by fixed-size image.

--- a/assets/less/components/links.less
+++ b/assets/less/components/links.less
@@ -106,7 +106,9 @@ a {
 
     img {
       width: auto;
-      height: 200px;
+      height: auto;
+      max-width: 100%;
+      max-height: 200px;
     }
   }
 
